2008-12-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/users/dialog_groups_list.cc:
	* glom/mode_design/users/dialog_users_list.cc: Constructors: 
	Do not enable row drag and drop on the treeviews, because it is not 
	used and it just confuses users who trigger it accidentally.
	This was just some left-over code from when these classes were started 
	by copying the layout dialog.
	As mentioned in Ubuntu bug 
	https://bugs.launchpad.net/ubuntu/+source/glom/+bug/299573
	(elmergato)

2008-12-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/dialog_existing_or_new.cc: Constructor: When the examples 
	directory does not exist, mention the path in the stderr message, to 
	help us to debug the problem.

2008-12-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas/canvas_group_grid.cc: create_lines():
	Do not create the grid lines with 0 steps, to avoid a hang.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/303453
	(elmergato)

2008-12-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/foundset.[h|cc]: Added has_no_criteria() 
	to check if it has a sort order or where clause.
	* glom/libglom/document/document_glom.[h|cc]: Added 
	set_criteria_current(), like set_layout_current(), so we can 
	temporarily remember the sort (and find) for a table while navigating.
	DocumentTableInfo: Hand-wrote copy constructor and operator=() rather 
	than depend on generated ones.
	* glom/utility_widgets/db_adddel/db_adddel.[h|cc]: 
	Added signal_sort_clause_changed, emitted when the user clicks on 
	the column header, which already caused a refresh with that sort.
	* glom/mode_data/box_data_list.[h|cc]: Respond to a sort change in the 
	DbAddDel widget, saving it temporarily in the document.
	* glom/mode_data/frame_glom.cc: show_table(): Use the remembered 
	criteria, from the document, where there is one.

	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/303422
	(elmergato)
